maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:70: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
     if (!aMurOuest(X,Y) && e>a &&){
                                ^